[package]
name = "matching_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Soroban SDK for on-chain settlement
soroban-sdk = "22.0.0"

# Libp2p for peer-to-peer networking
libp2p = { version = "0.54", features = ["tokio", "gossipsub", "mdns", "noise", "tcp", "yamux", "macros"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.21"

# Time handling
chrono = "0.4"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# UUID for order IDs
uuid = { version = "1.6", features = ["v4"] }

# Futures for async
futures = "0.3"

# Random number generation (used in bin/node.rs for key generation)
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bin]]
name = "matching_engine_node"
path = "src/bin/node.rs"
