[package]
name = "bridge_relayer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"
soroban-token-sdk = "22.0.0"
sha3 = "0.10.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
proptest = "1.4.0"
